# VariableNumberOfGradients

./: .gitignore  CMakeLists.txt  Main.cpp
Inc/: Logger.h  Macroses.inl  VNG.h
Lib/: CMakeLists.txt
Lib/EasyBMP/: EasyBMP.cpp
Src/: VNG.cpp
Tests/: CMakeLists.txt  Main.cpp  Tests.h
